--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.3.5</version>
+      <version>[4.3.6,)</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
-      <version>1.1.43</version>
+      <version>[1.2.31,)</version>
     </dependency>
 
     <dependency>
